<resources>
    <string name="app_name">GameTreasureBox</string>
    <string name="hanoi_hintContent">在此输入汉诺塔的层数</string>
    <string name="confirm">确认</string>
    <string name="entry">出&#160;&#160;&#160;&#160;口</string>

    <string name="noticeFor_1024">马上就要合成2048了，加油</string>
    <string name="noticeFor_2048">恭喜你合成一个2048</string>
    <string name="noticeFor_4096">恭喜你合成一个4096</string>
    <string name="noticeFor_32">继续努力哦</string>

    <string name="app_name_part1">Game</string>
    <string name="app_name_part2">Treasure</string>
    <string name="app_name_part3">Box</string>
    <string name="copyright"> Copyright © 2019 - ? created by JiaTai Sun</string>
    <string name="motto">创意技术&#160;&#160;决定高度</string>
    <string name="logo_name">百宝箱</string>

    <string name="kingdoms_hrd_nameTitle">三国华容道</string>
    <string name="hrd_Steps">步数</string>
    <string name="hrd_Times">用时</string>
    <string name="kingdoms_hrd_checkPoints">关卡</string>
    <string name="default_number">0</string>
    <string name="next_checkPoint">下一关</string>
    <string name="last_checkPoint">上一关</string>
    <string name="resetOrder">重置游戏</string>

    <string name="setup">用户注册</string>
    <string name="visitor">游客登录</string>
    <string name="forgetPasswrd">忘记密码</string>
    <string name="separator">&#160;&#160;|&#160;&#160;</string>
    <string name="hint_accountEditText">账号</string>
    <string name="hint_passwordEditText">密码</string>

    <string name="cancel">取消</string>
    <string name="uploadImage">上传头像</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="username">用户名</string>
    <string name="image">头&#160;&#160;&#160;&#160;像</string>

    <string name="defaultUsername">游客</string>
    <string name="defaultSignature">技术永无止境，永攀高峰方显年轻本色</string>

    <string name="sort_three_hrd_btn">三国华容道</string>
    <string name="sort_image_hrd_btn">图片华容道</string>
    <string name="sort_number_hrd_btn">数字华容道</string>

    <!--头部菜单-->
    <string name="nav_home">主界面</string>
    <string name="nav_rankList">排行榜</string>
    <string name="nav_musicControl">音乐</string>
    <string name="nav_logout">退出</string>
    <string name="nav_cancelAction">注销</string>
    <string name="local_upload">本地上传</string>
    <string name="camera_upload">相机上传</string>
    <string name="cancel_upload">取消上传</string>

</resources>
