<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/app_name_part1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:text="@string/app_name_part1"
        android:textColor="#444"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/app_name_part3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="36dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name_part3"
        android:textColor="#444"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/app_name_part2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/app_name_part2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="220dp"
        android:text="@string/app_name_part2"
        android:textColor="#444"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/app_start_copyright"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/foreGround_color_8_4096"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:gravity="center"
        android:text="@string/motto"
        android:textColor="@color/foreGround_color_8_4096"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/curtain"
        android:layout_width="373dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>