<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#553b3a3a"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical"
        android:id="@+id/content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cameraUpload"
            android:layout_width="match_parent"
            android:background="@drawable/up_corner_popup_bottom"
            android:textColor="#D00000"
            android:text="@string/camera_upload"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/localUpload"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:background="@drawable/down_corner_popup_bottom"
            android:textColor="#D00000"
            android:text="@string/local_upload"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/cancelUpload"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:background="@drawable/square_corner_popup_bottom"
            android:textColor="#333"
            android:text="@string/cancel_upload"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</RelativeLayout>